--- a/SistemaDesaparecidos/src/app/components/home/home.component.html
+++ b/SistemaDesaparecidos/src/app/components/home/home.component.html
@@ -1,7 +1,3 @@
-<div class="home-container">
-    <h1>Bienvenido a Trackme</h1>
-    <div class="button-container">
-      <button routerLink="/registro">Registrar</button>
-      <button routerLink="/iniciar-sesion">Iniciar Sesión</button>
-    </div>
-  </div>
+<app-header></app-header>
+
+<app-carousel></app-carousel>
