--- a/SistemaDesaparecidos/src/app/components/iniciar-sesion/iniciar-sesion.component.html
+++ b/SistemaDesaparecidos/src/app/components/iniciar-sesion/iniciar-sesion.component.html
@@ -1,27 +1,36 @@
-<div class="iniciar-sesion-container">
-    <h2>Iniciar Sesión</h2>
-    <form (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input
-          type="email"
-          id="email"
-          [(ngModel)]="credenciales.email"
-          name="email"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <label for="password">Contraseña:</label>
-        <input
-          type="password"
-          id="password"
-          [(ngModel)]="credenciales.password"
-          name="password"
-          required
-        />
-      </div>
-      <button type="submit">Iniciar Sesión</button>
-    </form>
-    <p *ngIf="mensaje">{{ mensaje }}</p>
+<div class="container">
+  <div class="forms">
+    <div class="form signup">
+      <span class="title">Iniciar sesion</span>
+      <form (ngSubmit)="onSubmit()">
+        <div class="input-field">
+          <input
+            type="email"
+            id="email"
+            [(ngModel)]="credenciales.email"
+            name="email"
+            placeholder="Ingrese su email"
+            required
+          />
+          <i class="uil uil-envelope icon"></i>
+        </div>
+        <div class="input-field">
+          <input
+            type="password"
+            id="password"
+            [(ngModel)]="credenciales.password"
+            name="password"
+            placeholder="Ingrese su contraseña"
+            required
+          />
+          <i class="uil uil-lock icon"></i>
+          <i class="uil uil-eye-slash showHidePw"></i>
+        </div>
+        <div class="input-field button">
+          <button type="submit">Registrar</button>
+        </div>
+      </form>
+      <p *ngIf="mensaje" class="mensaje">{{ mensaje }}</p>
+    </div>
   </div>
+</div>
