--- a/SistemaDesaparecidos/src/app/components/registro/registro.component.css
+++ b/SistemaDesaparecidos/src/app/components/registro/registro.component.css
@@ -1,47 +1,83 @@
-.registro-container {
-    max-width: 400px;
-    margin: 50px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  h2 {
-    text-align: center;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  input {
-    width: 100%;
-    padding: 8px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-  }
-  
-  button {
+    font-family: 'Poppins', sans-serif;
+}
+.container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 430px;
     width: 100%;
-    padding: 10px;
-    background-color: #28a745;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #218838;
-  }
-  
-  p {
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    padding: 30px;
+}
+.title {
+    font-size: 27px;
+    font-weight: 600;
     text-align: center;
-    margin-top: 15px;
-    color: green;
-  }
+}
+.input-field {
+    position: relative;
+    height: 50px;
+    width: 100%;
+    margin-top: 30px;
+}
+.input-field input {
+    width: 100%;
+    height: 100%;
+    padding: 0 35px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    border-bottom: 2px solid #ccc;
+    transition: all 0.2s ease;
+}
+.input-field input:focus {
+    border-bottom-color: #4070f4;
+}
+.input-field i {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #999;
+    font-size: 23px;
+    transition: all 0.2s ease;
+}
+.input-field i.icon {
+    left: 10px;
+}
+.input-field i.showHidePw {
+    right: 10px;
+    cursor: pointer;
+}
+.button {
+    margin-top: 35px;
+    text-align: center;
+}
+.button button {
+    border: none;
+    color: #fff;
+    font-size: 17px;
+    font-weight: 500;
+    padding: 10px 20px;
+    border-radius: 6px;
+    background-color: #4070f4;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.button button:hover {
+    background-color: #265df2;
+}
+.mensaje {
+    margin-top: 20px;
+    text-align: center;
+    color: #4070f4;
+    font-weight: 500;
+}
