--- a/SistemaDesaparecidos/src/app/components/registro/registro.component.html
+++ b/SistemaDesaparecidos/src/app/components/registro/registro.component.html
@@ -1,37 +1,47 @@
-<div class="registro-container">
-    <h2>Registro de Usuario</h2>
-    <form (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="nombre">Nombre:</label>
-        <input
-          type="text"
-          id="nombre"
-          [(ngModel)]="usuario.nombre"
-          name="nombre"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input
-          type="email"
-          id="email"
-          [(ngModel)]="usuario.email"
-          name="email"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <label for="password">Contraseña:</label>
-        <input
-          type="password"
-          id="password"
-          [(ngModel)]="usuario.password"
-          name="password"
-          required
-        />
-      </div>
-      <button type="submit">Registrar</button>
-    </form>
-    <p *ngIf="mensaje">{{ mensaje }}</p>
+<div class="container">
+  <div class="forms">
+    <div class="form signup">
+      <span class="title">Registro de Usuario</span>
+      <form (ngSubmit)="onSubmit()">
+        <div class="input-field">
+          <input
+            type="text"
+            id="nombre"
+            [(ngModel)]="usuario.nombre"
+            name="nombre"
+            placeholder="Ingrese su nombre"
+            required
+          />
+          <i class="uil uil-user icon"></i>
+        </div>
+        <div class="input-field">
+          <input
+            type="email"
+            id="email"
+            [(ngModel)]="usuario.email"
+            name="email"
+            placeholder="Ingrese su email"
+            required
+          />
+          <i class="uil uil-envelope icon"></i>
+        </div>
+        <div class="input-field">
+          <input
+            type="password"
+            id="password"
+            [(ngModel)]="usuario.password"
+            name="password"
+            placeholder="Ingrese su contraseña"
+            required
+          />
+          <i class="uil uil-lock icon"></i>
+          <i class="uil uil-eye-slash showHidePw"></i>
+        </div>
+        <div class="input-field button">
+          <button type="submit">Registrar</button>
+        </div>
+      </form>
+      <p *ngIf="mensaje" class="mensaje">{{ mensaje }}</p>
+    </div>
   </div>
+</div>
