--- a/SistemaDesaparecidos/src/app/components/iniciar-sesion/iniciar-sesion.component.html
+++ b/SistemaDesaparecidos/src/app/components/iniciar-sesion/iniciar-sesion.component.html
@@ -27,7 +27,7 @@
           <i class="uil uil-eye-slash showHidePw"></i>
         </div>
         <div class="input-field button">
-          <button type="submit">Registrar</button>
+          <button type="submit">Iniciar Sesion</button>
         </div>
       </form>
       <p *ngIf="mensaje" class="mensaje">{{ mensaje }}</p>
