--- a/SistemaDesaparecidos/src/app/components/registro/registro.component.html
+++ b/SistemaDesaparecidos/src/app/components/registro/registro.component.html
@@ -42,6 +42,7 @@
         </div>
       </form>
       <p *ngIf="mensaje" class="mensaje">{{ mensaje }}</p>
+      <p *ngIf="mensajeError" class="mensaje error">{{ mensajeError }}</p>
     </div>
   </div>
 </div>
