--- a/SistemaDesaparecidos/src/app/components/registro/registro.component.html
+++ b/SistemaDesaparecidos/src/app/components/registro/registro.component.html
@@ -37,6 +37,9 @@
           <i class="uil uil-lock icon"></i>
           <i class="uil uil-eye-slash showHidePw"></i>
         </div>
+        <small class="text-muted">
+          La contraseña debe tener al menos 8 caracteres, una mayúscula, un número y un carácter especial.
+        </small>
         <div class="input-field button">
           <button type="submit">Registrar</button>
         </div>
