--- a/SistemaDesaparecidos/src/app/components/registro/registro.component.html
+++ b/SistemaDesaparecidos/src/app/components/registro/registro.component.html
@@ -22,6 +22,7 @@
             name="email"
             placeholder="Ingrese su email"
             required
+            (ngModelChange)="validarEmail($event)"
           />
           <i class="uil uil-envelope icon"></i>
         </div>
