--- a/SistemaDesaparecidos/src/app/components/registro/registro.component.html
+++ b/SistemaDesaparecidos/src/app/components/registro/registro.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="forms">
     <div class="form signup">
+      <i class="uil uil-home home-icon" routerLink="/"></i>
       <span class="title">Registro de Usuario</span>
       <form (ngSubmit)="onSubmit()">
         <div class="input-field">
