Código base para revisión y refactor

--- a/SistemaDesaparecidos/src/app/components/home/home.component.html
+++ b/SistemaDesaparecidos/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-carousel></app-carousel>
-<app-reportes></app-reportes>
+<app-cards-reportes></app-cards-reportes>
+<app-foro-avistamientos></app-foro-avistamientos>
 <app-footer></app-footer>
