--- a/SistemaDesaparecidos/src/app/components/header/header.component.html
+++ b/SistemaDesaparecidos/src/app/components/header/header.component.html
@@ -5,8 +5,15 @@
     </label>
     <label class="logo">TrackMe</label>
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a routerLink="/registro">Registrarse</a></li>
-        <li><a routerLink="/iniciar-sesion">Iniciar Sesion</a></li>
+        <li><a routerLink="/">Home</a></li>
+        <ng-container *ngIf="!estaLogueado">
+            <li><a routerLink="/registro">Registrarse</a></li>
+            <li><a routerLink="/iniciar-sesion">Iniciar Sesión</a></li>
+        </ng-container>
+        <ng-container *ngIf="estaLogueado">
+            <li><a routerLink="/reportes">Reportes</a></li>
+            <li><a routerLink="/perfil">Perfil</a></li>
+            <li><a (click)="cerrarSesion()">Cerrar Sesión</a></li>
+        </ng-container>
     </ul>
 </nav>  
