Se agrego logs en en el frontend

--- a/SistemaDesaparecidos/src/app/components/cards-reportes/cards-reportes.component.html
+++ b/SistemaDesaparecidos/src/app/components/cards-reportes/cards-reportes.component.html
@@ -1,8 +1,9 @@
-<div class="contenedor-filtro">
+<div class="contenedor-filtro"> 
   <input type="text" [(ngModel)]="nombreBusqueda" placeholder="Nombre..." (input)="filtrarReportes()">
   <input type="number" [(ngModel)]="edadBusqueda" placeholder="Edad..." (input)="filtrarReportes()">
   <input type="text" [(ngModel)]="lugarBusqueda" placeholder="Lugar de desaparición..." (input)="filtrarReportes()">
   <input type="date" [(ngModel)]="fechaBusqueda" (input)="filtrarReportes()">
+  <button class="btn-limpiar" (click)="limpiarFiltros()">Limpiar filtros</button>
 </div>
 
 <div class="lista-reportes">
@@ -13,7 +14,7 @@
           class="imagen-reporte"
           [src]="reporte.imagen || 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTML0gExaohZHdZW3609F12nUmVc14WXYNx_w&s'"
           alt="Foto del reportado"
-        >
+        />
         <div class="info-reporte">
           <p><strong>Nombre:</strong> {{ reporte.nombre }}</p>
           <p><strong>Edad:</strong> {{ reporte.edad }}</p>
@@ -21,6 +22,24 @@
           <p><strong>Lugar:</strong> {{ reporte.lugarDesaparicion }}</p>
           <p class="descripcion-recortada"><strong>Descripción:</strong> {{ reporte.descripcion }}</p>
         </div>
+        <button class="btn-popup" (click)="mostrarPopup(reporte)">+</button>
+        <div *ngIf="reporte.mostrarPopup" class="popup">
+          <div class="popup-content">
+            <div class="popup-left">
+              <p><strong>Último Avistamiento:</strong></p>
+              <p><strong>Fecha:</strong> {{ reporte.ultimoAvistamiento?.fecha | date }}</p>
+              <p><strong>Lugar:</strong> {{ reporte.ultimoAvistamiento?.lugar }}</p>
+              <p class="descripcion">{{ reporte.ultimoAvistamiento?.descripcion }}</p>
+            </div>
+            <div class="popup-right">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8vCAqzGjq4P58F1sdodd-SGEHnInFq5RTlQ&s"
+                alt="Mapa"
+              />
+            </div>
+          </div>
+          <button class="cerrar-btn" (click)="cerrarPopup(reporte)">✕</button>
+        </div>        
       </div>
     </div>
   </ng-container>
