--- a/SistemaDesaparecidos/src/app/components/carousel/carousel.component.scss
+++ b/SistemaDesaparecidos/src/app/components/carousel/carousel.component.scss
@@ -1,37 +1,49 @@
 .carousel {
-    position: relative;
+  position: relative;
+  width: 100%;
+  margin: auto;
+  overflow: hidden;
+  height: 690px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  background-color: #fff;
+
+  .carousel-inner {
     width: 100%;
-    margin: auto;
-    overflow: hidden;
-    height: 600px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-  
-    .carousel-inner img {
-      width: 100%;
-      height: 100%;
-      display: block;
-      object-fit: cover;
-      filter: brightness(60%);
-    }
-  
-    button {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(0, 0, 0, 0.5);
-      color: white;
-      border: none;
-      padding: 10px;
-      cursor: pointer;
-  
-      &.prev {
-        left: 10px;
-      }
-  
-      &.next {
-        right: 10px;
-      }
+    height: 100%;
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(50%);
+    border-radius: 10px;
+  }
+
+  .controls {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+  }
+
+  button {
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    border: none;
+    padding: 10px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: background 0.3s ease;
+
+    &:hover {
+      background: rgba(0, 0, 0, 0.8);
     }
   }
-  
+
+}
