--- a/SistemaDesaparecidos/src/app/components/home/home.component.html
+++ b/SistemaDesaparecidos/src/app/components/home/home.component.html
@@ -1,5 +1,12 @@
 <app-header></app-header>
 <app-carousel></app-carousel>
-<app-cards-reportes></app-cards-reportes>
-<app-foro-avistamientos></app-foro-avistamientos>
+<div class="espaciador"></div> 
+<div class="contenedor">
+    <h2>Reportes</h2>
+    <app-cards-reportes></app-cards-reportes>
+</div>
+<div class="contenedor">
+    <h2>Avistamientos</h2>
+    <app-foro-avistamientos></app-foro-avistamientos>
+</div>
 <app-footer></app-footer>
