--- a/SistemaDesaparecidos/src/app/components/reportes/reportes.component.html
+++ b/SistemaDesaparecidos/src/app/components/reportes/reportes.component.html
@@ -1,9 +1,12 @@
 <app-header></app-header>
 
 <div class="container">
+
   <div class="formulario">
     <h2>Crear Nuevo Reporte</h2>
     <app-form-reportes></app-form-reportes>
+  </div>
+
   <div class="cards-reportes">
     <h2>Reportes Existentes</h2>
     <app-cards-reportes></app-cards-reportes>
@@ -18,5 +21,7 @@
     <h2>Foro de Avistamientos</h2>
     <app-foro-avistamientos></app-foro-avistamientos>
   </div>
+
 </div>
+
 <app-footer></app-footer>
