--- a/SistemaDesaparecidos/src/app/components/form-avistamientos/form-avistamientos.component.html
+++ b/SistemaDesaparecidos/src/app/components/form-avistamientos/form-avistamientos.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <!-- Mapa siempre visible e interactivo -->
-    <div #mapContainer id="mapaAvistamiento" style="height: 300px; margin-bottom: 1em;"></div>
+    <div #mapContainer id="mapaFormAvistamiento" style="height: 300px; margin-bottom: 1em;"></div>
         
     <div class="form-group">
       <label for="descripcion">📝 Descripción</label>
